--- a/codebase/Application/Home/Epsilon/Trade/footer_scripts.html
+++ b/codebase/Application/Home/Epsilon/Trade/footer_scripts.html
@@ -933,7 +933,7 @@ var buy_fees=$('#buy_fees').html();
               num: $('#buy_num').val(),
               paypassword: $('#buy_paypassword').val(),
               market: market,
-  			tradeType:'stop',
+  			// tradeType:'stop',
               type: 1
           }, function (data) {
               layer.closeAll('loading');
@@ -994,7 +994,7 @@ var buy_fees=$('#buy_fees').html();
   			stop: $('#sell_stop').val(),
               num: $('#sell_num').val(),
               paypassword: $('#sell_paypassword').val(),
-  			tradeType:'stop',
+  			// tradeType:'stop',
               market: market,
               type: 2
           }, function (data) {
