--- a/codebase/Application/Home/Epsilon/Index/crypto_lending.html
+++ b/codebase/Application/Home/Epsilon/Index/crypto_lending.html
@@ -144,7 +144,7 @@
                             </div>
                         </label>
                     </div>
-                    <a href="#" class="site-btn">Start Earning</a>
+                    <a href="/invest" class="site-btn">Start Earning</a>
                 </div>
 
                 <div class="earning">
@@ -220,7 +220,7 @@
                                 <p>Days</p>
                             </div>
                         </label>
-                    </div><a href="#" class="site-btn">Start Earning</a>
+                    </div><a href="/invest" class="site-btn">Start Earning</a>
                 </div>
             </div>
         </div>
