--- a/codebase/Application/Home/Epsilon/Index/home_apps.html
+++ b/codebase/Application/Home/Epsilon/Index/home_apps.html
@@ -4,22 +4,13 @@
 			<div class="row">
 				<div class="col-lg-5 col-md-12 order-lg-2 align-items-self">
 					<div class="appss-content">
-						<h2 class="apps-title">Download {:SHORT_NAME} App for the best coin buying and selling experience!</h2>
+						<h2 class="apps-title">Coming Soon: {:SHORT_NAME} App for the best trading experience!</h2>
 						<ul class="apps-property">
-							<li>Easily sign up in a few minutes with the mobile app</li>
-							<li>Access your assets whenever you want</li>
+							<li>Experience the ultimate coin buying and selling platform.</li>
+							<li>Quick and effortless sign-up process.</li>
 							<li>Trade anytime, anywhere, 24/7</li>
 							<li>Tablet and mobile multi-device support</li>
 						</ul>
-						<div class="row">
-							<div class="col-auto apps-qr">
-								<img src="__UPLOAD__/public/{$C['contact_app_img']}" class="img-fluid">
-							</div>
-							<div class="col-auto download-buttons">
-								<a href="#"><i class="fa fa-play" aria-hidden="true"></i></i></i> Google Play </a>
-								<a href="#"><i class="fa fa-apple" aria-hidden="true"></i> App Store </a>
-							</div>
-						</div>
 					</div>
 				</div>
 				<div class="col-lg-7 col-md-12 order-lg-1 align-items-end">
