--- a/codebase/Application/Home/Epsilon/Index/home_slider.html
+++ b/codebase/Application/Home/Epsilon/Index/home_slider.html
@@ -4,8 +4,8 @@
         <div class="banner-inner-section">
             <div class="banner-left-section">
                 <div class="index_banner-title__Ueyv2" data-wow-delay="0.2s">
-                    <h1 class="Main-heading">The World’s First Social Infused Exchange</h1>
-                    <p>Buy, sell, trade, and hold cryptocurrencies on {:DOMAIN_NAME}</p>
+                    <h1 class="Main-heading">The Gold Standard in Cryptocurrency Trading</h1>
+                    <p>Trade, buy, sell, and hold cryptocurrencies on {:DOMAIN_NAME}</p>
                 </div>
                 <div class="banner-email">
                     <div class="index_quick-reg-wrapper__AGLkO">
@@ -66,6 +66,15 @@
 </section>
   <include file="Index:home_pricing_ticker" />
 <style>
+.banner-email .dropdown-menu img {
+    width: 24px;
+    vertical-align: bottom;
+}
+.banner-email .dropdown-menu {
+    max-height: inherit !important;
+    min-height: auto !important;
+    height: 200px !important;
+}
 .Dark__mode {
     display: none;
 }
@@ -102,7 +111,7 @@ body#dark {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    /*overflow: hidden;*/
     background-color: #000001;
     padding-top: 60px;
     width: 100%;
