--- a/codebase/Application/Home/Epsilon/Index/image_text.html
+++ b/codebase/Application/Home/Epsilon/Index/image_text.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="content">
                     <h3 class="Main_headings">Top-class experience in digital assets investment</h3>
-                    <p>With low barriers to entry, we will offer you a one-stop investment service in derivatives and finance based on spot trading.</p>
+                    <p>Venture into the frontier of digital asset investment with unparalleled ease and sophistication. Our platform is designed to cater to both newcomers and experienced investors alike.</p>
                 </div>
             </div>
             <div class="home-guide-section">
@@ -19,8 +19,8 @@
 
                 </div>
                 <div class="content">
-                    <h3 class="Main_headings">Diversified trading options</h3>
-                    <p>A wide range of trading products can help you explore and play with cryptocurrencies, including spot, leverage, futures, ETF, index, and other trading varieties.</p>
+                    <h3 class="Main_headings">Easy Convert to USDT</h3>
+                    <p>Whether you're liquidating, securing profits, or seeking stability during market shifts, we offer smooth transactions and the agility to adapt your investment approach.</p>
                 </div>
             </div>
             <div class="home-guide-section">
@@ -31,7 +31,7 @@
                 </div>
                 <div class="content">
                     <h3 class="Main_headings">Top security risk control system</h3>
-                    <p>Industry-leading security technology and 24/7 platform monitoring ensure that your assets are protected in all aspects.</p>
+                    <p>Industry-leading security technology and 24/7 platform monitoring ensure that your assets are protected in all aspects. Our platform integrates advanced encryption technologies, multi-signature wallets, and rigorous internal controls to safeguard your assets.</p>
                 </div>
             </div>
         </div>
