--- a/codebase/Application/Home/Epsilon/Index/index.html
+++ b/codebase/Application/Home/Epsilon/Index/index.html
@@ -1,34 +1,33 @@
-<include file="Public:header"/>
-<include file="Index:home_slider"/>
+<include file="Public:header" />
+<include file="Index:home_slider" />
 
-<include file="Index:home_annoucements"/>
-<include file="Index:home_small_sliders"/>
-<include file="Index:home_markets"/>
-<include file="Index:exchange_box"/>
-<include file="Index:image_text"/>
-<include file="Index:explore_products"/>
-<include file="Index:crypto_lending"/>
-<include file="Index:home_apps"/>
-<include file="Index:home_blog_box"/>
+<include file="Index:home_annoucements" />
+<include file="Index:home_small_sliders" />
+<include file="Index:home_markets" />
+<include file="Index:exchange_box" />
+<include file="Index:image_text" />
+<include file="Index:explore_products" />
+<include file="Index:crypto_lending" />
+<include file="Index:home_apps" />
+<include file="Index:home_blog_box" />
 
 <script>
-
-	function easytrade(){
-	var coin=$("select#easycoin").find("option:selected").attr('data-value');
-	var amount=$("input#easyamount").val();
-	var url='{:U("Easy/index")}';
-	if(!coin){
-	layer.tips('{:l("Please select coin!")}', '#easycoin', {tips: 3});
-	return false;
-	}
-	if(!amount){
-	layer.tips('{:l("Please enter amount")}', '#easyamount', {tips: 3});
-	return false;
-	}
-	coin=coin.toUpperCase();
-	url=url+'?coin='+coin+'&amount='+amount;
-	console.log(url);
-	window.location=url;
-	}
+  function easytrade() {
+    var coin = $("select#easycoin").find("option:selected").attr("data-value");
+    var amount = $("input#easyamount").val();
+    var url = '{:U("Easy/index")}';
+    if (!coin) {
+      layer.tips('{:l("Please select coin!")}', "#easycoin", { tips: 3 });
+      return false;
+    }
+    if (!amount) {
+      layer.tips('{:l("Please enter amount")}', "#easyamount", { tips: 3 });
+      return false;
+    }
+    coin = coin.toUpperCase();
+    url = url + "?coin=" + coin + "&amount=" + amount;
+    console.log(url);
+    window.location = url;
+  }
 </script>
-<include file="Public:footer_minimal"/>
+<include file="Public:footer_minimal" />
