--- a/codebase/Application/Home/Epsilon/Public/header.html
+++ b/codebase/Application/Home/Epsilon/Public/header.html
@@ -1,9 +1,10 @@
-<include file="Public:html_header"/>
+<include file="Public:html_header" />
 <body id="{$Think.cookie.themeMode}">
-<!-- Header Start -->
-<header class="{$Think.cookie.themeMode}-bb">
-<include file="Public:top_nav"/>	
-</header>
-<!-- Header ends -->
+  <!-- Header Start -->
+  <header class="{$Think.cookie.themeMode}-bb">
+    <include file="Public:top_nav" />
+  </header>
+  <!-- Header ends -->
 
-<main class="wrapper grey-bg">
+  <main class="wrapper grey-bg"></main>
+</body>
