--- a/codebase/Application/Home/Epsilon/Public/html_header.html
+++ b/codebase/Application/Home/Epsilon/Public/html_header.html
@@ -9,6 +9,7 @@
 <meta name="Keywords" content="<neq name="page_title" value=''>{$page_title} |</neq> {:C('web_keywords')}">
 <meta name="Description" content="<neq name="page_title" value=''>{$page_title} |</neq> {:C('web_description')}">
 <meta name="author" content="static">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="copyright" content="{:SHORT_NAME}">
 <link rel="shortcut icon" href="/favicon.ico"/>
 <link href="__EPSILON__/img/favicon.png" rel="icon" type="image/x-icon">
