--- a/codebase/Application/Home/Epsilon/Trade/left_orderbook.html
+++ b/codebase/Application/Home/Epsilon/Trade/left_orderbook.html
@@ -36,14 +36,14 @@
 				</div>
 				<div id="bsorders">
 				<table class="table buysellorders">
-					   <thead >
+					<thead >
 						<tr class="d-flex w-100 justify-content-between">
-							<th  scope="col">Price (USDT)</th>
+							<th scope="col">Price (USDT)</th>
 							<th scope="col">Amount</th>
 							<th scope="col">Total (USDT)</th>
 						</tr>
-                                    </thead>
-					<tbody class="selling" id="sellorderlist">
+					</thead>
+					<tbody class="selling sellMobtbody" id="sellorderlist">
 					</tbody>
 					<tbody class="ob-heading">
 					
@@ -58,7 +58,7 @@
 						</td>
 					</tr>
 					</tbody>
-					<tbody class="buying" id="buyorderlist">
+					<tbody class="buying buyMobtbody" id="buyorderlist">
 					</tbody>
 				</table>
 				</div>
