--- a/codebase/Application/Home/Epsilon/Trade/right_historyPro.html
+++ b/codebase/Application/Home/Epsilon/Trade/right_historyPro.html
@@ -27,7 +27,7 @@
 											</th>
 										</tr>
 										</thead>
-        <tbody id="dealrecordbody"></tbody>
+        <tbody class="tradeMobtbody" id="dealrecordbody"></tbody>
       </table>
     </div>
   </div>
