--- a/codebase/Application/Home/Epsilon/Index/exchange_box.html
+++ b/codebase/Application/Home/Epsilon/Index/exchange_box.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="currency-inner-section">
             <div class="left-section">
-                <h2 class="Main_headings">Exchange USDT and national currencies for crypto</h2>
+                <h2 class="Main_headings">Exchange crypto for USDT and national currencies</h2>
                 <p>Here’s how easy it is:</p>
                 <ul>
                     <li>Choose the currencies</li>
@@ -172,7 +172,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="/swap" class="site-btn">Exchange</a>
+                        <a href="/easy" class="site-btn">Exchange</a>
                 </form>
                 </div>
                 </form>
