--- a/codebase/Application/Home/Epsilon/Index/explore_products.html
+++ b/codebase/Application/Home/Epsilon/Index/explore_products.html
@@ -4,18 +4,18 @@
             <h2 class="Main_headings">Explore Our Products</h2><br/>
             <div class="explore-box-main-section">
                 <div class="explore-box">
-                    <p class="explore-box-top">Ultra-low trading fees,<br><b>800+</b> cryptocurrencies</p>
+                    <p class="explore-box-top">Ultra-low trading fees,<br><b>400+</b> cryptocurrencies</p>
                     <div class="explore-box-bottom">
                         <div class="index_action-text">
                             <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M13.3536 4.60355C13.5488 4.40829 13.5488 4.09171 13.3536 3.89645L10.1716 0.714465C9.97631 0.519203 9.65973 0.519203 9.46447 0.714465C9.2692 0.909727 9.2692 1.22631 9.46447 1.42157L12.2929 4.25L9.46447 7.07843C9.2692 7.27369 9.2692 7.59027 9.46447 7.78553C9.65973 7.9808 9.97631 7.9808 10.1716 7.78553L13.3536 4.60355ZM4.37114e-08 4.75L13 4.75L13 3.75L-4.37114e-08 3.75L4.37114e-08 4.75Z" fill="#FFBE40"></path>
                                 </svg>
 
-                            <a href="#">Spot</a>
+                            <a href="/trade/tradepro">Trade</a>
                         </div><img src="__EPSILON__/img/redesign/homepage/spot_dark-image-3.png"></div>
                 </div>
                 <div class="explore-box">
-                    <p class="explore-box-top">Up to <b>125x</b> leverage,<br>USDT/COIN-M products are available at your choice</p>
+                    <p class="explore-box-top">Convert To <b>USDT</b> With <br>Ease</p>
                     <div class="explore-box-bottom">
                         <div class="index_action-text">
 
@@ -23,7 +23,7 @@
                             <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M13.3536 4.60355C13.5488 4.40829 13.5488 4.09171 13.3536 3.89645L10.1716 0.714465C9.97631 0.519203 9.65973 0.519203 9.46447 0.714465C9.2692 0.909727 9.2692 1.22631 9.46447 1.42157L12.2929 4.25L9.46447 7.07843C9.2692 7.27369 9.2692 7.59027 9.46447 7.78553C9.65973 7.9808 9.97631 7.9808 10.1716 7.78553L13.3536 4.60355ZM4.37114e-08 4.75L13 4.75L13 3.75L-4.37114e-08 3.75L4.37114e-08 4.75Z" fill="#FFBE40"></path>
                                 </svg>
-                            <a href="#">Futures</a>
+                            <a href="/easy">Convert</a>
                         </div><img src="__EPSILON__/img/redesign/homepage/spot_dark-image-2.png"></div>
                 </div>
                 <div class="explore-box">
@@ -34,7 +34,7 @@
                             <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M13.3536 4.60355C13.5488 4.40829 13.5488 4.09171 13.3536 3.89645L10.1716 0.714465C9.97631 0.519203 9.65973 0.519203 9.46447 0.714465C9.2692 0.909727 9.2692 1.22631 9.46447 1.42157L12.2929 4.25L9.46447 7.07843C9.2692 7.27369 9.2692 7.59027 9.46447 7.78553C9.65973 7.9808 9.97631 7.9808 10.1716 7.78553L13.3536 4.60355ZM4.37114e-08 4.75L13 4.75L13 3.75L-4.37114e-08 3.75L4.37114e-08 4.75Z" fill="#FFBE40"></path>
                                 </svg>
-                            <a href="#">Savings</a>
+                            <a href="/invest">Savings</a>
                         </div><img src="__EPSILON__/img/redesign/homepage/spot_dark-image-1.png"></div>
                 </div>
             </div>
