--- a/codebase/Application/Home/Epsilon/Trade/mid_tradebox.html
+++ b/codebase/Application/Home/Epsilon/Trade/mid_tradebox.html
@@ -26,7 +26,7 @@
       id="pills-trade-limit"
       role="tabpanel"
     >
-      <div class="d-flex justify-content-between">
+      <div class="outflexboxx d-flex justify-content-between">
         <div class="market-trade-buy">
           <div class="d-flex justify-content-between align-items-center">
             <p class="w-full">
