--- a/codebase/Application/Home/Epsilon/Trade/binance_ws_footer_scripts.html
+++ b/codebase/Application/Home/Epsilon/Trade/binance_ws_footer_scripts.html
@@ -81,18 +81,27 @@
 		$('input#socket_data').val(1);
 		var decimals=6;
 		
+		const maxOrders = 20;
+		const minOrders = 10;
+
 		var list = [];
 		var previous_sell_vol = 0;
 		var previous_buy_vol = 0;
 		if (data.b) {
-			data.sell = data.b.reverse();
+			data.sell = data.b;
 			var sellvol = data.sell.reduce((x, y) => {return x + Number(y[1]);},0);
 			for (i = 0; i < data.sell.length; i++) {
 				previous_sell_vol = previous_sell_vol + Number(data.sell[i][1]);
-				list[i]= '<tr title="Buy at this price" class="topmost pl-1" id="activesell'+i+'" style="background:linear-gradient(to left, rgba(240, 80, 110, 0.2) '+(data.sell[i][1] * 100 / sellvol)+'%, transparent 0%); flex-shrink: 0;" onclick="autotrust(this,\'sell\',1)"><td class="red col-4">' + data.sell[i][0] + '</td><td >' + Number(data.sell[i][1]).toFixed(decimals) + '</td><td>' + (data.sell[i][0]*data.sell[i][1]).toFixed(decimals) + '</td></tr>';
+				list[i]= '<tr title="Buy at this price" class="topmost pl-1" id="activesell'+i+Date.now()+'" style="background:linear-gradient(to left, rgba(240, 80, 110, 0.2) '+(data.sell[i][1] * 100 / sellvol)+'%, transparent 0%); flex-shrink: 0;" onclick="autotrust(this,\'sell\',1)"><td class="red col-4">' + data.sell[i][0] + '</td><td >' + Number(data.sell[i][1]).toFixed(decimals) + '</td><td>' + (data.sell[i][0]*data.sell[i][1]).toFixed(decimals) + '</td></tr>';
+			}
+
+			if(data.sell.length <= minOrders){
+				$("#sellorderlist").prepend(list);
+				$("#sellorderlist").length > maxOrders ? $(`#sellorderlist tr:nth-last-child( -n + ${data.sell.length})`) : '';
+			}else{
+				$("#sellorderlist").html(list);
 			}
 		}
-		$("#sellorderlist").html(list);
 
 		list = [];
 		if (data.a) {
@@ -100,10 +109,16 @@
 			var buyvol = data.buy.reduce((x, y) => {return x + Number(y[1]);},0);
 			for (i = 0; i < data.buy.length; i++) {
 				previous_buy_vol = previous_buy_vol + Number(data.buy[i][1]);
-				list [i]= '<tr title="Sell at this price" class="topmost pl-1" id="activebuy'+i+'" style="background:linear-gradient(to left, rgba(103, 153, 1, 0.2) '+(data.buy[i][1] * 100 / buyvol)+'%, transparent 0%)" onclick="autotrust(this,\'buy\',1)"><td class="green col-4"  >' + data.buy[i][0] + '</td><td class="col-4">' + Number(data.buy[i][1]).toFixed(decimals)+ '</td><td class="col-4">' + (data.buy[i][0]*data.buy[i][1]).toFixed(decimals) + '</td></tr>';
+				list [i]= '<tr title="Sell at this price" class="topmost pl-1" id="activebuy'+i+Date.now()+'" style="background:linear-gradient(to left, rgba(103, 153, 1, 0.2) '+(data.buy[i][1] * 100 / buyvol)+'%, transparent 0%)" onclick="autotrust(this,\'buy\',1)"><td class="green col-4"  >' + data.buy[i][0] + '</td><td class="col-4">' + Number(data.buy[i][1]).toFixed(decimals)+ '</td><td class="col-4">' + (data.buy[i][0]*data.buy[i][1]).toFixed(decimals) + '</td></tr>';
+			}
+			
+			if(data.buy.length <= minOrders){
+				$("#buyorderlist").prepend(list);
+				$("#buyorderlist").length > maxOrders ? $(`#buyorderlist tr:nth-last-child( -n + ${data.buy.length})`) : '';
+			}else{
+				$("#buyorderlist").html(list);
 			}
 		}
-		$("#buyorderlist").html(list);
 			
 		// blinkme('#activebuy');
 		// blinkme('#activebuy');
