update order book limit

--- a/codebase/Application/Home/Epsilon/Trade/index.html
+++ b/codebase/Application/Home/Epsilon/Trade/index.html
@@ -7,6 +7,9 @@ body, html{
 .sm_screen{
 	display: none;
 }
+.order-book tbody tr{
+  flex-shrink: 0;
+}
 @media only screen and (max-width: 768px){
 	.lg_screen{
 		display: none;
