--- a/codebase/Application/Home/Epsilon/Trade/tradepro.html
+++ b/codebase/Application/Home/Epsilon/Trade/tradepro.html
@@ -65,6 +65,9 @@ body, html{
 .customm_tabs, .mob_scr_trades, .mob_scr_orders{
 	display: none;
 }
+.order-book tbody tr{
+  flex-shrink: 0;
+}
 @media only screen and (max-width: 768px){
 	.mobscrno{
 		display: none;
