--- a/codebase/Application/Home/Epsilon/Public/top_nav.html
+++ b/codebase/Application/Home/Epsilon/Public/top_nav.html
@@ -392,7 +392,7 @@
         </a>
       </li>
 
-      <li class="nav-item dropdown header-custom-icon ml-3">
+      <!--li class="nav-item dropdown header-custom-icon ml-3">
         <a
           aria-expanded="false"
           aria-haspopup="true"
@@ -413,7 +413,7 @@
             Scan to Download iOS and Android App
           </div>
         </div>
-      </li>
+      </li-->
       
       <eq name="Think.session.userId" value="0">
         <li class="nav-item header-custom-icon login-menu ml-3">
