--- a/codebase/Application/Home/Epsilon/Index/home_slider.html
+++ b/codebase/Application/Home/Epsilon/Index/home_slider.html
@@ -623,7 +623,122 @@ body#dark {
         padding: 0 !important;
     }
 }
-
+#dark .blog .blog-grid .card .card-body {
+    background-color: #393b41;
+}
+#dark .blog-grid .card .card-body .card-title, #dark .blog .card .card-body .card-text, .blog .card .card-body .date {
+    color: white !important;
+}
+#light .select_wrap .default_option{
+	background-color: #f6f6f6 !important;
+}
+@media(max-width: 425px) {
+	#accordion.panel-group ul li {
+		margin-bottom: 16px;
+	}
+	.banner-section .Main-heading{
+		font-size: 24px !important;
+		text-align: center;
+		max-width: 100%!important;
+	}
+	.banner-section p{
+		text-align: center;
+	}
+	.banner-section {
+		padding: 34px 0 40px !important;
+	}
+	.slick-slide{
+		font-size: 12px;
+	}
+	.announcements-block .icon{
+		padding: 0 !important;
+	}
+	.read-more.ml-auto {
+		top: 32px;
+	}
+	tbody#price_today_ul tr td {
+		font-size: 12px;
+	}
+	.currency-main-section {
+		padding-top: 0px !important;
+	}
+	.Main_headings {
+		line-height: inherit !important;
+		font-size: 20px !important;
+	}
+	.currency-main-section .Main_headings {
+		margin-bottom: 10px !important;
+		line-height: inherit !important;
+	}
+	.currency-input-filed label, .currency-input-main .currency-input-filed .give-text {
+		left: 10px !important;
+		line-height: 22px !important;
+	}
+	form.currency-selector-form input, .currency-input-main .currency-input-filed {
+		top: 50% !important;
+	}
+	.currency-main-section ul li, .currency-main-section p, .explore-our-products .Main_headings {
+		margin-bottom: 0 !important;
+	}
+	.home-guide-container-step .home-guide-section:nth-child(even) .image-section{
+		margin-left: 0 !important;
+	}
+	.explore-box {
+		padding: 14px 0 0 14px !important;
+	}
+	.explore-box p {
+		font-size: 20px !important;
+		line-height: 30px !important;
+		margin-bottom: 0 !important;
+	}
+	.earning-top-section p {
+		font-size: 18px !important;
+		line-height: inherit !important;
+		margin-bottom: 0;
+	}
+	.earning-left-section svg {
+		width: 36px;
+		height: 36px;
+	}
+	.radio-button-form label, .radio-button-forms label {
+		margin: 0 5px 10px 0 !important;
+	}
+	.radio-button-form .days, .radio-button-forms .days {
+		padding: 3px 4px !important;
+	}
+	.radio-button-form .days span, .radio-button-forms .days span {
+		font-size: 14px !important;
+	}
+	.site-btn, .currency-main-section .site-btn {
+		height: 40px !important;
+		font-size: 16px !important;
+	}
+	.Crypto-Lending-section {
+		padding: 0 0 30px 0 !important;
+	}
+	section.apps .appss-content h2 {
+		font-size: 24px;
+		text-align: center;
+	}
+	section.apps .appss-content .apps-property li, .app-page .app-banner li {
+		font-size: 16px;
+		line-height: 24px;
+	}
+	section.apps .appss-content {
+		margin-bottom: 0;
+	}
+	section.blog {
+		padding-top: 0;
+	}
+	.section-title {
+		font-size: 28px;
+		margin-bottom: 10px !important;
+	}
+	.home-markets .nav.nav-pills .nav-link {
+		padding: 14px 10px;
+		font-size: 13px !important;
+	}
+}
 @media(max-width: 390px) {
     .radio-button-form, .radio-button-forms {
         flex-wrap: wrap !important;
