--- a/codebase/Application/Home/Epsilon/About/index.html
+++ b/codebase/Application/Home/Epsilon/About/index.html
@@ -95,6 +95,32 @@
 </main>
 <style>
 	/*--------------ABOUT-US-CSS-START-------------- */
+	#light .Business-scope-section .index_titleAll__e7b9e {
+		padding-top: 0;
+		color: black;
+	}
+	#light .Business-scope-section .Business-scope-image {
+		background-image: url(/Public/template/epsilon/img/redesign/about/world_msp.png) !important;
+		background-size: cover;
+		background-color: white;
+	}
+	#light .about-banner-image {
+		background-image: url(/Public/template/epsilon/img/redesign/about/earthv.jpg) !important;
+		background-color: white;
+	}
+	#light .banner-top-section .index_titleBox__5j_B3 .about-headings, #light .banner-top-section .index_titleBox__5j_B3 p, #light .banner-mid-section .index_desBOX__4OhqS, #light .Business-scope-section .index_desBOX__qYef9 {
+		color: black;
+	}
+	#light .banner-bottom-section .index_top__XL9xj {
+		color: #fcc968;
+	}
+	#light .banner-bottom-section{
+		bottom: 18px;
+	}
+	#light .index_bottom__e0gEN {
+		font-weight: bold;
+		color: black;
+	}
 	.about-banner-image {
 		min-height: 1020px;
 		position: relative;
