--- a/codebase/Application/Home/Epsilon/Content/market.html
+++ b/codebase/Application/Home/Epsilon/Content/market.html
@@ -1,6 +1,6 @@
 <include file="Public:header" />
 <include file="Index:home_pricing_ticker" />
-<div class="container">
+<!--div class="container">
   <div class="row">
     <include file="User:top_bar" />
     <div class="col-12 col-md-6 order-1 order-md-2 float-right">
@@ -15,7 +15,14 @@
       </ul>
     </div>
   </div>
-</div>
+</div-->
 <include file="Content:widget_markets" />
 <include file="Content:widget_info_modal" />
 <include file="Public:footer_minimal" />
+
+<style>
+.graph-main-section {
+    padding: 0;
+    margin: 0;
+}
+</style>
