--- a/codebase/Application/Home/Epsilon/Index/home_annoucements.html
+++ b/codebase/Application/Home/Epsilon/Index/home_annoucements.html
@@ -15,9 +15,9 @@
 						</volist>
 						
 					</div>
-					<div class="read-more ml-auto">
+					<!--div class="read-more ml-auto">
 						<a href="{:U('Article')}">{:l("More")} <i class="ion ion-md-arrow-forward"></i></a>
-					</div>
+					</div-->
 				</div>
 			</div>
 		</div>
