--- a/codebase/Application/Home/Epsilon/Index/home_pricing_ticker.html
+++ b/codebase/Application/Home/Epsilon/Index/home_pricing_ticker.html
@@ -34,8 +34,11 @@
 <style>
 .graph-main-section {
     background-color: #131723;
-    padding: 33px 10px;
-    margin: 80px 0;
+    padding: 10px 0px;
+    margin: 60px 0 20px;
+}
+.graph-item .graph-heading .rate{
+	margin-top: -7px !important;
 }
 .read-more.ml-auto {
     position: absolute;
