--- a/codebase/Application/Home/Epsilon/Wallet/cryptodeposit.html
+++ b/codebase/Application/Home/Epsilon/Wallet/cryptodeposit.html
@@ -161,28 +161,31 @@
 			<div class="card col-md-5 mt-3 m-b-40  offset-md-1">
 				<div class="card-body">
 					<h6 class="text-bold">
-						Didn't the deposited amount arrive? 
+						Facing Deposit Issues?
 					</h6>
 					<div class="card">
 						
 					</div>
 					<div class="white-bg">
-						If you encounter the following issues during the deposit process, you can go to the Deposit Status Inquiry to search for your current deposit status or retrieve your assets via the self-service application.
+						If you experience challenges during your deposit process, consider the following:
 						<ul class="orig">
-							<li>The amount deposited did not arrive even after a long time.</li>
+							<li>Ensure the correct Deposit Status Inquiry to check on your deposit status.</li>
+							<li>Verify that the correct MEMO/Label was entered.</li>
+							<li>Check that you haven't deposited any unlisted coins.</li>
 						</ul>
-						<a href="{:U('Finance/trace')}" class="btn yellow-bg btn-sm">Trace Deposit</a>
+						<!--a href="{:U('Finance/trace')}" class="btn yellow-bg btn-sm">Trace Deposit</a-->
 					</div>
 					<hr/>
 					<div class="white-bg">
-						Contact Support
+						Need Further Assistance?
 						<ul class="orig">
-							<li>You did not enter the MEMO/Label correctly</li>
-							<li>You deposited unlisted coins</li>
+							<li>Contact our Support Team.</li>
+							<li>Familiarize yourself with common issues related to cryptocurrencies deposited with incorrect or missing information.</li>
+							<li>Learn more about purchasing cryptocurrencies.</li>
 						</ul>
 					</div>
 				</div>
-				<div class="card-body">
+				<!--div class="card-body">
 					<h6 class="text-bold">FAQ</h6>
 					
 					<ul class="orig">
@@ -191,7 +194,7 @@
 						<li><a href="">Cryptocurrencies Deposited with Wrong or Missing Aktifet/Memo</a></li>
 						<li><a href="">How to buy Cryptocurrency</a></li>
 					</ul>
-				</div>
+				</div-->
 
 			</div>
 		</div>
