--- a/codebase/Application/Home/Epsilon/Public/footer_nav.html
+++ b/codebase/Application/Home/Epsilon/Public/footer_nav.html
@@ -31,8 +31,17 @@
 						  </volist>
 					
 						<div class="block">
-							<h3>{:l("Community")}</h3>
+							<!--h3>{:l("Community")}</h3-->
+							<h3>{:l("Contact")}</h3>
 							<ul>
+								<li>
+									<a href="mailto:support@{:DOMAIN_NAME}"  style="white-space: nowrap; margin-bottom: 5px;">
+										<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+											<path fill="#fff" d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"/>
+										</svg>
+										support@{:DOMAIN_NAME}
+									</a>
+								</li>
 								<li>
 									<a href="mailto:info@{:DOMAIN_NAME}"  style="white-space: nowrap; margin-bottom: 5px;">
 										<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
@@ -96,21 +105,29 @@
 				</div>
 				<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 				  <ul class="link-wrapper">
-					  <li>
-	<a href="mailto:info@{:DOMAIN_NAME}" style="white-space: nowrap; margin-bottom: 5px;">
-		<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
-			<path fill="#fff" d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"/>
-		</svg>
-		info@{:DOMAIN_NAME}
-	</a>
-</li>
+					<li>
+						<a href="mailto:support@{:DOMAIN_NAME}" style="white-space: nowrap; margin-bottom: 5px;">
+							<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+								<path fill="#fff" d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"/>
+							</svg>
+							support@{:DOMAIN_NAME}
+						</a>
+					</li>
+					<li>
+						<a href="mailto:info@{:DOMAIN_NAME}" style="white-space: nowrap; margin-bottom: 5px;">
+							<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+								<path fill="#fff" d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"/>
+							</svg>
+							info@{:DOMAIN_NAME}
+						</a>
+					</li>
 				  </ul>
 				</div>
 			  </div>
 		  </div>
 
 		  <div class="panel-group">
-			<ul class="link-wrapper d-flex justify-content-center w-100 align-items-center">
+			<ul class="footerul link-wrapper d-flex justify-content-center w-100 align-items-center">
 				<li class="text-white">{:C('web_icp')}</li>
 				<li class="ml-2 text-white">All rights reserved.</li>
 			</ul>
@@ -118,3 +135,23 @@
 		  </div>
 	</section>
 </main>
+
+<style>
+.panel-group ul.link-wrapper li a {
+    color: rgba(197, 197, 197, 1);
+}
+@media(max-width: 425px) {
+	.footerul{
+		display: block !important;
+		text-align: center;
+		font-size: 12px;
+		padding: 4px 8px 8px 8px !important;
+	}
+	.footerul li:last-child{
+		margin: 0 !important;
+	}
+	#accordion.panel-group ul li {
+		margin-bottom: 16px;
+	}
+}
+</style>
